--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <div class="container">
           <ul>
             <li class="feature-item">
+              <div class="feature-icons">
+                <svg class="feature-icons-item">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -62,6 +67,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-icons">
+                <svg class="feature-icons-item">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -69,6 +79,12 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-icons">
+                <svg class="feature-icons-item">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
+
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -76,6 +92,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-icons">
+                <svg class="feature-icons-item">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3>Technolgies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -170,6 +191,53 @@
             </li>
           </ul>
         </div>
+      </section>
+      <section>
+        <h2>Customers</h2>
+        <ul class="customers">
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo-1"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo-2"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo-3"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo-4"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="customers-icons">
+              <svg class="customers-icons-item">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
+              </svg>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer-class">
