--- a/index.html
+++ b/index.html
@@ -151,6 +151,39 @@
               <div class="team-item-name">
                 <h3>Mark Guerrero</h3>
                 <p>Produck Designer</p>
+                <ul class="sm-team-links">
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -163,6 +196,39 @@
               <div class="team-item-name">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
+                <ul class="sm-team-links">
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -175,6 +241,39 @@
               <div class="team-item-name">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
+                <ul class="sm-team-links">
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -187,69 +286,144 @@
               <div class="team-item-name">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
+                <ul class="sm-team-links">
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="team-sm">
+                      <svg class="team-sm-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
       <section>
-        <h2>Customers</h2>
-        <ul class="customers">
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo-1"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo-2"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo-3"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo-4"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="customers-icons">
-              <svg class="customers-icons-item">
-                <use href="./images/icons.svg#icon-Logo-5"></use>
-              </svg>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Customers</h2>
+          <ul class="customers">
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icons">
+                <svg class="customers-icons-item">
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer-class">
+    <footer class="footer-class footer-list">
       <div class="container logo-footer">
-        <a class="link-footer" href="">
-          <span class="logo-web"> WEB</span
-          ><span class="logo-studio-footer">STUDIO</span>
-        </a>
-        <p class="footer-tekst">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul>
+          <li class="footer-item">
+            <a class="link-footer" href="">
+              <span class="logo-web"> WEB</span
+              ><span class="logo-studio-footer">STUDIO</span>
+            </a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li class="footer-sm">
+            <p class="sm-text">Social media</p>
+            <ul class="sm">
+              <li>
+                <div class="sm-icons">
+                  <svg class="sm-icons-item">
+                    <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                  </svg>
+                </div>
+              </li>
+
+              <li>
+                <div class="sm-icons">
+                  <svg class="sm-icons-item">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </div>
+              </li>
+
+              <li>
+                <div class="sm-icons">
+                  <svg class="sm-icons-item">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </div>
+              </li>
+
+              <li>
+                <div class="sm-icons">
+                  <svg class="sm-icons-item">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
