--- a/index.html
+++ b/index.html
@@ -387,41 +387,43 @@
               digital marketing & growth solutions.
             </p>
           </li>
-          <li class="footer-sm">
-            <p class="sm-text">Social media</p>
-            <ul class="sm">
-              <li>
-                <div class="sm-icons">
-                  <svg class="sm-icons-item">
-                    <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                  </svg>
-                </div>
-              </li>
+          <li>
+            <div class="footer-sm">
+              <p class="sm-text">Social media</p>
+              <ul class="sm">
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                    </svg>
+                  </div>
+                </li>
 
-              <li>
-                <div class="sm-icons">
-                  <svg class="sm-icons-item">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </div>
-              </li>
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
 
-              <li>
-                <div class="sm-icons">
-                  <svg class="sm-icons-item">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </div>
-              </li>
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
 
-              <li>
-                <div class="sm-icons">
-                  <svg class="sm-icons-item">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
-              </li>
-            </ul>
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
