--- a/portfolio.html
+++ b/portfolio.html
@@ -192,16 +192,58 @@
         </div>
       </section>
     </main>
-    <footer class="footer-class">
+    <footer class="footer-class footer-list">
       <div class="container logo-footer">
-        <a class="link-footer" href="">
-          <span class="logo-web"> WEB</span
-          ><span class="logo-studio-footer">STUDIO</span>
-        </a>
-        <p class="footer-tekst">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul>
+          <li class="footer-item">
+            <a class="link-footer" href="">
+              <span class="logo-web"> WEB</span
+              ><span class="logo-studio-footer">STUDIO</span>
+            </a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li>
+            <div class="footer-sm">
+              <p class="sm-text">Social media</p>
+              <ul class="sm">
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                    </svg>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="sm-icons">
+                    <svg class="sm-icons-item">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
