--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
       <section class="team">
         <div class="container">
           <h2 class="team-header">Our Team</h2>
+
           <ul class="team-item">
-            <li>
+            <li class="team-item-box">
               <img
                 src="images/person1.jpg"
                 alt="man with a beard in a collared shirt"
@@ -186,7 +187,7 @@
                 </ul>
               </div>
             </li>
-            <li>
+            <li class="team-item-box">
               <img
                 src="images/person2.jpg"
                 alt="man in a collared shirt"
@@ -231,7 +232,7 @@
                 </ul>
               </div>
             </li>
-            <li>
+            <li class="team-item-box">
               <img
                 src="images/person3.jpg"
                 alt="woman with long hair in a pink sweater"
@@ -276,7 +277,7 @@
                 </ul>
               </div>
             </li>
-            <li>
+            <li class="team-item-box">
               <img
                 src="images/person4.jpg"
                 alt="man with a beard in a t-shirt"
