--- a/index.html
+++ b/index.html
@@ -155,33 +155,43 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2-1"
+                          ></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -200,33 +210,43 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2-1"
+                          ></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -245,33 +265,43 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2-1"
+                          ></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -290,33 +320,43 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2-1"
+                          ></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
 
                   <li>
                     <div class="team-sm">
-                      <svg class="team-sm-item">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="">
+                        <svg class="team-sm-item">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -330,46 +370,46 @@
           <h2>Customers</h2>
           <ul class="customers">
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="customers-icons">
-                <svg class="customers-icons-item">
+              <a href="">
+                <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -394,33 +434,41 @@
               <ul class="sm">
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
