--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,7 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="container">
+      <section class="container">
           <ul class="navi-button">
             <li><button type="button">All</button></li>
             <li>
@@ -61,10 +60,6 @@
               <button type="button">Marketing</button>
             </li>
           </ul>
-        </div>
-      </section>
-      <section class="project-margin">
-        <div class="container">
           <ul class="project-box">
             <li>
               <img
@@ -211,33 +206,41 @@
               <ul class="sm">
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="sm-icons">
-                    <svg class="sm-icons-item">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a href="">
+                      <svg class="sm-icons-item">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
