--- a/portfolio.html
+++ b/portfolio.html
@@ -206,7 +206,7 @@
               <ul class="sm">
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-instagram-2-1"></use>
                       </svg>
@@ -216,7 +216,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
@@ -226,7 +226,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
@@ -236,7 +236,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
