--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use
                             href="./images/icons.svg#icon-instagram-2-1"
@@ -167,7 +167,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -177,7 +177,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -187,7 +187,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -210,7 +210,7 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use
                             href="./images/icons.svg#icon-instagram-2-1"
@@ -222,7 +222,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -232,7 +232,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -242,7 +242,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -265,7 +265,7 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use
                             href="./images/icons.svg#icon-instagram-2-1"
@@ -277,7 +277,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -287,7 +287,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -297,7 +297,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -320,7 +320,7 @@
                 <ul class="sm-team-links">
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use
                             href="./images/icons.svg#icon-instagram-2-1"
@@ -332,7 +332,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -342,7 +342,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -352,7 +352,7 @@
 
                   <li>
                     <div class="team-sm">
-                      <a href="">
+                      <a href="#">
                         <svg class="team-sm-item">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -370,42 +370,42 @@
           <h2>Customers</h2>
           <ul class="customers">
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="#">
                 <svg class="customers-icons">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
@@ -434,7 +434,7 @@
               <ul class="sm">
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-instagram-2-1"></use>
                       </svg>
@@ -444,7 +444,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
@@ -454,7 +454,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
@@ -464,7 +464,7 @@
 
                 <li>
                   <div class="sm-icons">
-                    <a href="">
+                    <a href="#">
                       <svg class="sm-icons-item">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
